# Mistral-Ecole_42

./: .env  .gitignore  Makefile  Pipeline_json.md  README.md  Security questionnaire response supplier 11_cleaned_anonymized.xlsx  env  main.py  pyproject.toml  requirements.txt  worker.py
Back/: .env  Makefile  (+3 more)
evaluation_risques/: .gitignore  .~lock.Security questionnaire response supplier 7_cleaned.xlsx#  Makefile  README.md  Security questionnaire response supplier 7_cleaned.xlsx  pyproject.toml  send_pdf.py
evaluation_risques/.agents/skills/workflows/references/: execution_ids.md  pipeline_pattern.md
evaluation_risques/.agents/skills/workflows/references/getting-started/: installation.mdx  python-sdk.mdx  value-proposition.mdx
evaluation_risques/.agents/skills/workflows/references/guides/: _deployment-patterns.mdx  assist-workflows.mdx  concurrency.mdx  dependency-injection.mdx  limitations.mdx  local-execution.mdx  migration-v2-to-v3.mdx  signals-queries-updates.mdx  workflows-exception.mdx
evaluation_risques/.agents/skills/workflows/scripts/: test_workflow.py
evaluation_risques/src/examples/: worker.py
evaluation_risques/src/examples/cargo_release/: activities.py  models.py
evaluation_risques/src/examples/code_modernization/: __init__.py  models.py  sub_workflow.py
evaluation_risques/src/examples/insurance_claims/: README.md  __init__.py  workflow.py
evaluation_risques/src/examples/insurance_claims/sample_data/: claim_medium_severity.json
evaluation_risques/src/workflows/: analyzer.py  extractor.py  reporter.py  router.py  scorer.py  utils.py
(+47 files in other folders)
