[project]
name = "evaluation_risques"
version = "0.1.0"
description = "A Mistral Workflows project"
requires-python = ">=3.12"
dependencies = [
    "mistralai-workflows[mistralai]>=3.0.0,<4",
    "pydantic",
    "python-dotenv",
    "pdfplumber",
    "reportlab",
    "mistralai",
    "pandas",
    "numpy",
    "openpyxl",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.0",
    "watchdog>=4.0",
]

[tool.uv]
exclude-newer = "7 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entrypoints", "src/workflows", "src/examples"]

[tool.hatch.build.targets.wheel.sources]
"src/worker.py" = "worker.py"
